Fixing image widths when statically defined on mobile, also iframe embed widths

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -90,6 +90,8 @@ sup {
   top: -.5em;
 }
 img {
+  max-width: 100%;
+  height: auto;
   border-style: none;
 }
 svg:not(:root) {
@@ -481,6 +483,8 @@ iframe {
   padding-right: 0;
   padding-top: 0;
   margin-bottom: 1.45rem;
+  max-width: 100%;
+  height: auto;
 }
 hr {
   margin-left: 0;
